Bug 458861. Validate TrueType headers before activating downloaded font. r=roc, sr=vlad,roc