gfx/thebes/public/gfxUserFontSet.h
@@ -63,20 +63,6 @@ struct gfxFontFaceSrc {
     PRUint32               mFormatFlags;
 };
 
-// data needed to initialize platform font
-// After download completes, platform-specific code is responsible for
-// removing temp file and managing cache token. Depending on the
-// platform, these may need to persist after the platform font has been
-// created.
-// lifetime: time during which font is downloaded and active
-struct gfxDownloadedFontData {
-    nsCOMPtr<nsIFile>      mFontFile;     // file containing font data
-    nsCOMPtr<nsISupports>  mDownloader;   // need to a ref to this to prevent file from being deleted
-
-    // format hint flags, union of all possible formats
-    PRUint32               mFormatFlags;  // opentype, truetype, svg, etc. (if known)
-};
-
 // subclassed by loader code to contain needed context info
 // lifetime: user font set lifetime 
 class gfxFontLoaderContext {
@@ -216,7 +202,7 @@ public:
     // returns true if platform font creation sucessful (or local()
     // reference was next in line)
     PRBool OnLoadComplete(gfxFontEntry *aFontToLoad, 
-                          const gfxDownloadedFontData& aFontData, 
+                          const PRUint8 *aFontData, PRUint32 aLength,
                           nsresult aDownloadStatus);
 
     // generation - each time a face is loaded, generation is
