gfx/thebes/src/gfxWindowsPlatform.cpp
@@ -722,57 +722,32 @@ public:
 
 class EOTFontStreamReader {
 public:
-    EOTFontStreamReader(nsILocalFile *aFontFile, PRUint8 *aEOTHeader, 
+    EOTFontStreamReader(const PRUint8 *aFontData, PRUint32 aLength, PRUint8 *aEOTHeader, 
                         PRUint32 aEOTHeaderLen)
-        : mFontFile(aFontFile), mFd(nsnull), mOpenError(PR_FALSE), 
-          mInHeader(PR_TRUE), mHeaderOffset(0), mEOTHeader(aEOTHeader), 
-          mEOTHeaderLen(aEOTHeaderLen)
+        : mInHeader(PR_TRUE), mHeaderOffset(0), mEOTHeader(aEOTHeader), 
+          mEOTHeaderLen(aEOTHeaderLen), mFontData(aFontData), mFontDataLen(aLength),
+          mFontDataOffset(0)
     {
     
     }
 
     ~EOTFontStreamReader() 
     { 
-        if (mFd) {
-            PR_Close(mFd);
-        }
 
-        mFontFile->Remove(PR_FALSE);
     }
 
-    nsCOMPtr<nsILocalFile>  mFontFile;
-    PRFileDesc              *mFd;
-    PRPackedBool            mOpenError;
     PRPackedBool            mInHeader;
     PRUint32                mHeaderOffset;
     PRUint8                 *mEOTHeader;
     PRUint32                mEOTHeaderLen;
-
-    PRBool OpenFontFile()
-    {
-        nsresult rv;
-
-        rv = mFontFile->OpenNSPRFileDesc(PR_RDONLY, 0, &mFd);
-        if (NS_FAILED(rv) || !mFd)
-            return PR_FALSE;
-
-        return PR_TRUE;
-    }
+    const PRUint8           *mFontData;
+    PRUint32                mFontDataLen;
+    PRUint32                mFontDataOffset;
 
     unsigned long Read(void *outBuffer, const unsigned long aBytesToRead)
     {
         PRUint32 bytesLeft = aBytesToRead;
         PRUint8 *out = static_cast<PRUint8*> (outBuffer);
-
-        if (mOpenError)
-            return 0;
-
-        if (!mFd) {
-            if (!OpenFontFile()) {
-                mOpenError = PR_TRUE;
-                return 0;
-            }
-        }
 
         // read from EOT header
         if (mInHeader) {
@@ -786,7 +761,10 @@ public:
         }
 
         if (bytesLeft) {
-            PRInt32 bytesRead = PR_Read(mFd, out, bytesLeft);
+            PRInt32 bytesRead = PR_MIN(bytesLeft, mFontDataLen - mFontDataOffset);
+            memcpy(out, mFontData, bytesRead);
+            mFontData += bytesRead;
+            mFontDataOffset += bytesRead;
             if (bytesRead > 0)
                 bytesLeft -= bytesRead;
         }
@@ -806,12 +784,15 @@ public:
 
 gfxFontEntry* 
 gfxWindowsPlatform::MakePlatformFont(const gfxFontEntry *aProxyEntry, 
-                                     const gfxDownloadedFontData* aFontData)
+                                     const PRUint8 *aFontData, PRUint32 aLength)
 {
     // if calls aren't available, bail
     if (!TTLoadEmbeddedFontPtr || !TTDeleteEmbeddedFontPtr)
         return nsnull;
 
+    if (!gfxFontUtils::ValidateSFNTHeaders(aFontData, aLength))
+        return nsnull;
+        
     // create an eot header
     nsAutoTArray<PRUint8,2048> eotHeader;
     PRUint8 *buffer;
@@ -824,11 +805,7 @@ gfxWindowsPlatform::MakePlatformFont(const gfxFontEntry *aProxyEntry,
     PRInt32 ret;
 
     {
-        nsCOMPtr<nsILocalFile> fontFile(do_QueryInterface(aFontData->mFontFile, &rv));
-        if (NS_FAILED(rv))
-            return nsnull;
-
-        rv = gfxFontUtils::MakeEOTHeader(fontFile, &eotHeader, &isCFF);
+        rv = gfxFontUtils::MakeEOTHeader(aFontData, aLength, &eotHeader, &isCFF);
         if (NS_FAILED(rv))
             return nsnull;
 
@@ -838,7 +815,7 @@ gfxWindowsPlatform::MakePlatformFont(const gfxFontEntry *aProxyEntry,
         
         ULONG privStatus, pulStatus;
         MakeUniqueFontName(fontName);
-        EOTFontStreamReader eotReader(fontFile, buffer, eotlen);
+        EOTFontStreamReader eotReader(aFontData, aLength, buffer, eotlen);
 
         ret = TTLoadEmbeddedFontPtr(&fontRef, TTLOAD_PRIVATE, &privStatus, 
                                    LICENSE_PREVIEWPRINT, &pulStatus, 
