layout/style/nsFontFaceLoader.h
@@ -42,7 +42,7 @@
 #ifndef nsFontFaceLoader_h_
 #define nsFontFaceLoader_h_
 
-#include "nsIDownloader.h"
+#include "nsIStreamLoader.h"
 #include "nsIURI.h"
 #include "gfxUserFontSet.h"
 
@@ -50,7 +50,7 @@ class nsIRequest;
 class nsISupports;
 class nsPresContext;
 
-class nsFontFaceLoader : public nsIDownloadObserver
+class nsFontFaceLoader : public nsIStreamLoaderObserver
 {
 public:
 
@@ -59,7 +59,7 @@ public:
   virtual ~nsFontFaceLoader();
 
   NS_DECL_ISUPPORTS
-  NS_DECL_NSIDOWNLOADOBSERVER 
+  NS_DECL_NSISTREAMLOADEROBSERVER 
 
   // initiate the load
   nsresult Init();  
@@ -72,8 +72,6 @@ private:
   nsRefPtr<gfxFontEntry>              mFontEntry;
   nsCOMPtr<nsIURI>                    mFontURI;
   gfxUserFontSet::LoaderContext*      mLoaderContext;
-  gfxDownloadedFontData               mFaceData;
-  nsCOMPtr<nsIStreamListener>         mDownloader;
 };
 
 class nsFontFaceLoaderContext : public gfxUserFontSet::LoaderContext {
